changed scroll-monitor url to be local

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" charset="utf-8"></script>
-    <script src="https://raw.githubusercontent.com/paulhhowells/scroll-monitor/master/scroll-monitor.js" charset="utf-8"></script>
+    <script src="scroll-monitor.js" charset="utf-8"></script>
     <script src="rollback.js" charset="utf-8"></script>
   </body>
 </html>
